Closed Bug 500493 Opened 16 years ago Closed 16 years ago

fix bogus getter_AddRefs

Categories

(Core :: Graphics: Canvas2D, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

Not sure where this came from, but it's wrong..
Attachment #385190 - Flags: review?(pavlov)
What would the consequence of this bug be?
Just massive leaked refs to the canvas surface.. which won't cause any problems really, since it's always copied to itself (so doesn't get deallocated). Though it might cause some memory leaks, not sure about fennec's usage.
Attachment #385190 - Flags: review?(pavlov) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: