b=500493; fix bogus getter_AddRefs in canvas code; r=stuart